@@ -130,7 +130,7 @@ grub_ls_list_files (char *dirname, int longlist, int all, int human)
 		grub_printf ("%-12d", file->size);
 	      
 	    }
-	  (fs->close) (file);
+	  grub_file_close (file);
       	}
       else
 	grub_printf ("%-12s", "DIR");
